Updated IG link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Vegetarian</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -85,6 +86,13 @@
             bottom: 0;
             width: 100%;
         }
+
+        /* Style for the Instagram icon */
+        .ig-icon {
+            color: white;
+            margin-right: 5px;
+        }
+
     </style>
 </head>
 
@@ -133,6 +141,7 @@
 
 <footer>
     &copy; 2024 World Vegetarian. All rights reserved.
+    Follow us on <a href="https://www.instagram.com/worldvegetarian.life/" target="_blank"><i class="fab fa-instagram ig-icon"></i></a>
 </footer>
 
 </body>
